--- a/src/app/presentation/features/auth/login/login.component.html
+++ b/src/app/presentation/features/auth/login/login.component.html
@@ -1,20 +1,14 @@
 <!-- Página completa centrada -->
 <div class="min-h-screen flex items-center justify-center p-medium bg-white text-black">
-
   <!-- Card responsivo y angosto en desktop -->
-  <div
-    class="w-c-1/3  p-large rounded-medium border-style-solid border-primary">
-
+  <div class="w-c-1/3 p-large rounded-medium border-style-solid border-primary">
     <!-- Título -->
     <div class="text-center mb-small">
-      <h1 class="text-heading font-bold">
-        🔑 <span class="align-middle">Login</span>
-      </h1>
+      <h1 class="text-heading font-bold">🔑 <span class="align-middle">Login</span></h1>
     </div>
 
     <!-- Formulario -->
     <form class="flex flex-col gap-small" [formGroup]="form" (ngSubmit)="submit()">
-
       <!-- Usuario -->
       <label class="text-small font-medium" for="username">Usuario</label>
       <input
@@ -40,7 +34,8 @@
           type="button"
           class="btn btn-primary-light whitespace-nowrap"
           (click)="togglePwd()"
-          aria-label="Mostrar/Ocultar contraseña">
+          aria-label="Mostrar/Ocultar contraseña"
+        >
           {{ showPwd() ? '🙈 Ocultar' : '👁️ Ver' }}
         </button>
       </div>
@@ -49,9 +44,7 @@
       <p class="text-small text-danger" *ngIf="error()">{{ error() }}</p>
 
       <!-- Submit -->
-      <button class="btn btn-primary mt-small w-full" [disabled]="loading()">
-        Entrar
-      </button>
+      <button class="btn btn-primary mt-small w-full" [disabled]="loading()">Entrar</button>
     </form>
   </div>
 </div>
