test(auth and login): :test_tube: add unit test with mocks for AuthFacade2 and LoginUseCase"

--- a/src/app/presentation/features/auth/login/login.component.html
+++ b/src/app/presentation/features/auth/login/login.component.html
@@ -45,7 +45,9 @@
         <p class="text-small text-danger">{{ error() }}</p>
       }
       <!-- Submit -->
-      <button class="btn btn-primary mt-small w-full" [disabled]="loading()">Entrar</button>
+      <button type="submit" class="btn btn-primary mt-small w-full" [disabled]="loading()">
+        Entrar
+      </button>
     </form>
   </div>
 </div>
