--- a/src/app/presentation/features/auth/login/login.component.html
+++ b/src/app/presentation/features/auth/login/login.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- Formulario -->
-    <form class="flex flex-col gap-small" [formGroup]="form" (ngSubmit)="submit()">
+    <form class="flex flex-col gap-small" [formGroup]="form" (ngSubmit)="submit($event)">
       <!-- Usuario -->
       <label class="text-small font-medium" for="username">Usuario</label>
       <input
