--- a/src/app/presentation/features/layout/layout.component.html
+++ b/src/app/presentation/features/layout/layout.component.html
@@ -21,10 +21,10 @@
       class="w-auto flex flex-col gap-small rounded-medium border-style-solid border-primary p-medium gap-large bg-primary text-white sm:basis-sidebar md:basis-sidebar-md lg:basis-sidebar-lg sm:w-medium"
     >
       <div class="text-small font-bold">📁 Menú</div>
-      <a class="btn btn-info text-center" routerLink="/layout/welcome" routerLinkActive="active">
+      <a class="btn btn-info text-center" routerLink="welcome" routerLinkActive="active">
         Dashboard
       </a>
-      <a class="btn btn-info text-center" routerLink="/layout/components" routerLinkActive="active">
+      <a class="btn btn-info text-center" routerLink="components" routerLinkActive="active">
         Componentes
       </a>
       <a class="btn btn-info text-center" routerLink="/layout/documentation" routerLinkActive="active">
