--- a/src/app/presentation/features/layout/layout.component.html
+++ b/src/app/presentation/features/layout/layout.component.html
@@ -27,10 +27,10 @@
       <a class="btn btn-info text-center" routerLink="components" routerLinkActive="active">
         Componentes
       </a>
-      <a class="btn btn-info text-center" routerLink="/layout/documentation" routerLinkActive="active">
+      <a class="btn btn-info text-center" routerLink="documentation" routerLinkActive="active">
         Documentación
       </a>
-      <a class="btn btn-info text-center" routerLink="/layout/settings" routerLinkActive="active">
+      <a class="btn btn-info text-center" routerLink="settings" routerLinkActive="active">
         Ajustes
       </a>
     </aside>
